# Research-OS-Core

./: .gitignore  README.md
agent/: artifact_sync.js  event_bus.js  hb-run.js  local_executor.js  package-lock.json  package.json  server.js  ssh_executor.js  stress.py  test2.js  test_server.js
agent/logs/: control_events_1782019958824.jsonl  control_events_1782020571241.jsonl  (+2 more)
docs/architecture/: task.md  (+5 more)
frontend/: package.json
hackbrain-v1-core/hackbrain-verification-kernel/: Cargo.toml
hackbrain-v1-core/hackbrain-verification-kernel/src/: main.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/bellman/: mod.rs  semantics.rs  solver.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/core/: cursor.rs  mod.rs  state.rs  transition.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/core/wal/: codec.rs  error.rs  mod.rs  recovery.rs  segment.rs  writer.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/ctl/: atl.rs  evaluator.rs  fixpoint.rs  mod.rs  syntax.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/dbm/: closure.rs  constraint.rs  mod.rs  zone.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/engine/: checker.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/fixpoint/: convergence.rs  delta.rs  engine.rs  lattice.rs  mod.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/mdp/: game.rs  mod.rs  policy.rs  quotient.rs  reachability.rs
hackbrain-v1-core/hackbrain-verification-kernel/src/mtbdd/: apply.rs  cache.rs  manager.rs  mod.rs  node.rs  ops.rs  policy_bdd.rs  reorder.rs  sync_product.rs  unique_table.rs
(+37 files in other folders)
