[package]
name = "hackbrain-verification-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.14"
fxhash = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.5.1"
crc32fast = "1.4.0"
petgraph = "0.6"
bitvec = "1.0"
log = "0.4"
env_logger = "0.11"
